added movie_recs_env_gpu so that we can run week4 on a gpu

--- a/movie_recs/movie_recs_env.yml
+++ b/movie_recs/movie_recs_env.yml
@@ -10,3 +10,16 @@ dependencies:
   - streamlit
   - tensorflow
   - uszipcode
+
+name: movie_recs_env_gpu
+dependencies:
+- numpy
+- pandas
+- pip
+- python=3.6.0
+- pip:
+  - keras
+  - sklearn
+  - streamlit
+  - tensorflow-gpu
+  - uszipcode
