cleaning up README for movie_recs and separated gpu env into its own yml file

--- a/movie_recs/movie_recs_env_gpu.yml
+++ b/movie_recs/movie_recs_env_gpu.yml
@@ -1,4 +1,4 @@
-name: movie_recs_env
+name: movie_recs_env_gpu
 dependencies:
 - numpy
 - pandas
@@ -8,5 +8,5 @@ dependencies:
   - keras
   - sklearn
   - streamlit
-  - tensorflow
+  - tensorflow-gpu
   - uszipcode
