local install instructions in root README, consistency changes

--- a/deep_q_learning/environment.yml
+++ b/deep_q_learning/environment.yml
@@ -1,4 +1,4 @@
-name: streamlit-deeprl
+name: deep_q_learning
 channels:
   - defaults
 dependencies:
@@ -9,4 +9,3 @@ dependencies:
   - pip:
     - gym[atari]
     - streamlit
-
